[package]
name = "cedh-proxy-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
http-cache-reqwest = "0.15.1"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = "0.12.15"
reqwest-middleware = "0.4.2"
ril = { version = "0.10.3", features = ["png", "text"] }
rust-embed = "8.7.1"
scryfall = "0.20.0"
tokio = { version = "1.45.0", features = ["full"] }
